[tool.poetry]
name = "dagster-ext"
version = "0.1.0"
description = "`dagster-ext` is a Meltano utility extension."
authors = ["Jules Huisman"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "dagster_ext" },
    { include = "files_dagster_ext" },
    { include = "meltano" }
]
include = [
   "files_dagster_ext"
]

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
click = "^8.1.7"
typer = "^0.9.0"
dagit = ">=1.0"
dagster = "^1.6.5"
dagster-dbt = ">=0.16"
cookiecutter = "^2.1.1"
rich = "^13.7.0"
dagster-meltano = "1.5.3"
# Dependencies from Meltano EDK, remove when dependency fixed
structlog = "^24.1.0"
PyYAML = "^6.0.0"
pydantic = "^2.6.1"
devtools = "^0.12.2"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
isort = "^5.10.1"
flake8 = "^3.9.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/quantile-development/dagster-ext"

[tool.poetry.scripts]
dagster_extension = 'dagster_ext.main:app'
dagster_invoker = 'dagster_ext.pass_through:pass_through_cli_dagster'
dagit_invoker = 'dagster_ext.pass_through:pass_through_cli_dagit'
cloud_invoker = 'dagster_ext.pass_through:pass_through_cli_cloud'